--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -7,6 +7,42 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.profile__image::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.profile__image:hover::before {
+  opacity: 1;
+}
+
+.profile__edit-avatar-icon{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 24px;
+    height: 24px;
+    background-size: cover;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    background-image: url('../../../images/edit-avatar.svg');
+}
+
+.profile__image:hover .profile__edit-avatar-icon {
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
